fix arrow text align

--- a/css/style.css
+++ b/css/style.css
@@ -12229,3 +12229,7 @@ body:not(.lg-from-hash) .lg-outer.lg-start-zoom .lg-item.lg-complete .lg-object 
   font-size: 45px !important; 
   padding-top: 7px;
 }
+
+.office > li {
+  display: flex !important;
+}
